JSAI/error/src/test/resources/base/notjslibrary_a011.js
var i = -5.34 >> 2;
print(i)
i;
